12.ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Service'
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - edu.wedoops.io
    secretName: edu-wedoops-tls-cert
  rules:
  - host: coolapp.edu.wedoops.io
    http:
      paths:
      - path: /
        backend:
          serviceName: cool-app
          servicePort: 80
  - host: apache.edu.wedoops.io
    http:
      paths:
      - path: /
        backend:
          serviceName: first-app-service
          servicePort: 80
  - host: node.edu.wedoops.io
    http:
      paths:
      - path: /
        backend:
          serviceName: awesome-service
          servicePort: 80
  - host: sinatra.edu.wedoops.io
    http:
      paths:
      - path: /
        backend:
          serviceName: sinatra
          servicePort: 80
  - host: final.edu.wedoops.io
    http:
      paths:
      - path: /
        backend:
          serviceName: app-final-service
          servicePort: 80
